--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <title>Chelsea F.C.</title>
 </head>
 <header>
-
+    <h1>Welcome to Chelsea FC fanpage</h1>
+    <a href="https://en.wikipedia.org/wiki/Chelsea_F.C.">Check more info here</a>
+    <div class="image">
+        <img src="https://i.pinimg.com/originals/54/d0/8a/54d08a26b02a5185d6c9c825c95ed328.jpg", alt="Chelsea FC logo" />
+    </div>
 </header>
 <body>
+    <section>
+        <img src=""/>
+    </section>
     <section>
         <table>
             <tr>
@@ -34,9 +41,6 @@
                 <td>180</td>
             </tr>
         </table>
-    </section>
-    <section>
-        <img src=""/>
     </section>
 </body>
 <footer>
